--- a/Read/ReadKotlinWiki/02.Kotlin基本语法.md
+++ b/Read/ReadKotlinWiki/02.Kotlin基本语法.md
@@ -67,7 +67,7 @@
         point.x = 30
         point.y = 30
         ```
-- 使用lateinit var，可以使得变量的初始化可以延迟到需要的时候
+- 使用`lateinit var`，可以使得变量的初始化可以延迟到需要的时候
     - 比如在使用dagger的时候，需要inject,如下
         - @Inject lateinit var mPresenter: MapHomePresent
     - 但是需要慎用lateinit, 因为你可能后面忘记了初始化，但是编译器又不会报错提醒。只有运行之后才会检测到，如下
