--- a/Read/ReadKotlinWiki/18.懒加载初始化.md
+++ b/Read/ReadKotlinWiki/18.懒加载初始化.md
@@ -12,16 +12,12 @@
 
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议或者问题，万事起于忽微，量变引起质变！
-
 
 
 ### 01.lazy
 #### 1.1 by lazy作用
-- 懒初始化是指推迟一个变量的初始化时机，变量在使用的时候才去实例化，这样会更加的高效。因为我们通常会遇到这样的情况，一个变量直到使用时才需要被初始化，或者仅仅是它的初始化依赖于某些无法立即获得的上下文。 
+- 懒初始化是指推迟一个变量的初始化时机，变量在使用的时候才去实例化，这样会更加的高效。
+    - 因为我们通常会遇到这样的情况，一个变量直到使用时才需要被初始化，或者仅仅是它的初始化依赖于某些无法立即获得的上下文。 
 
 
 
@@ -72,13 +68,16 @@
     private lateinit var adapter : AndroidCollectAdapter        //正确的
     private lateinit var a : Int                //报错
     ```
-- lateinit var只能用来修饰类属性，不能用来修饰局部变量，并且只能用来修饰对象，不能用来修饰基本类型(因为基本类型的属性在类加载后的准备阶段都会被初始化为默认值)。
-- lateinit var的作用也比较简单，就是让编译期在检查时不要因为属性变量未被初始化而报错。
+- `lateinit var`只能用来修饰类属性
+    - 不能用来修饰局部变量，并且只能用来修饰对象，不能用来修饰基本类型(因为基本类型的属性在类加载后的准备阶段都会被初始化为默认值)。
+- `lateinit var`的作用也比较简单，就是让编译期在检查时不要因为属性变量未被初始化而报错。
 
 
 #### 1.2 注意问题
-- Kotlin相信当开发者显式使用lateinit var 关键字的时候，他一定也会在后面某个合理的时机将该属性对象初始化的(然而，如果用完才想起还没初始化该怎么办？？？)。
-- lateinit 本身的含义是延迟初始化，但是在编译时必须保证 lateinit 修饰的参数被初始化，否则编译之后运行会报错。注意是运行是会报错，这个问题很严重，所以用的话一定要记得初始化。
+- Kotlin相信当开发者显式使用`lateinit var`关键字的时候
+    - 它一定也会在后面某个合理的时机将该属性对象初始化的(然而，如果用完才想起还没初始化该怎么办？？？)。
+- lateinit 本身的含义是延迟初始化
+    - 但是在编译时必须保证 lateinit 修饰的参数被初始化，否则编译之后运行会报错。注意是运行是会报错，这个问题很严重，所以用的话一定要记得初始化。
 
 
 
