--- a/Read/ReadMeWiki/00.方案实践/18.App启动优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/18.App启动优化实践.md
@@ -163,7 +163,7 @@
 #### 1.1 使用命令行方式获取
 - 可以通过adb命令，使用am服务来获取冷启动时间：
     ```
-    adb shell am start -S -R 10 -W com.yc.ycandroidtool/.MainActivity
+    adb shell am start -S -R 10 -W com.yc.ycandroidtool/包名.MainActivity
     adb shell am start -W [packageName]/[packageName.MainActivity]
     ```
 - 或
@@ -173,6 +173,7 @@
         -c android.intent.category.LAUNCHER
         -a android.intent.action.MAIN
     ```
+- 指令的含义
     - -S表示每次启动前先强行停止；
     - -R表示重复测试次数。
     - -c 和 -a 为可选参数，可以为 intent 指定 和 。
