--- a/Read/ReadMeWiki/10.其他重要/02.Android编译问题.md
+++ b/Read/ReadMeWiki/10.其他重要/02.Android编译问题.md
@@ -87,6 +87,16 @@ https://github.com/leavesCZY/AndroidGuide
     - 第四步，输入adb kill-server，之后输入adb start-server，然后再尝试连接手机就可以呢！
 
 
+#### zsh: command not found: adb
+- 修改终端配置
+- 打开并编辑：open .bash_profile
+    1）打开终端，输入：open .bash_profile     【意思： 打开 .bash_profile文件（如果无，则自动新建）】
+    2）如果已经有了，输入：open .bash_profile -e    【意思：打开并编辑 该文件】
+    3）在.bash_profile中输入: 
+- 执行如下命令立即生效：
+    - 4）source .bash_profile
+
+
 #### adb常见命令
 - 什么是ADB？
     - ADB的全称为Android Debug Bridge，就是调试桥的作用，存放在sdk安装目录下的platform-tools文件夹中，借助这个工具，我们可以管理设备或手机模拟器的状态,可以让你与仿真实例或连接的安卓系统的设备进行通信。
