--- a/Read/ReadAndroidWiki/14.Jetpack/10.LiveData详细分析.md
+++ b/Read/ReadAndroidWiki/14.Jetpack/10.LiveData详细分析.md
@@ -11,18 +11,18 @@
 - 10.LiveData源码总结
 
 
-### 00.使用LiveData实现bus事件总线
-- 利用LiveData实现事件总线，替代EventBus。充分利用了生命周期感知功能，可以在activities, fragments, 或者 services生命周期是活跃状态时更新这些组件。支持发送普通事件，也可以发送粘性事件；还可以发送延迟消息，以及轮训延迟消息等等。
-- https://github.com/yangchong211/YCLiveDataBus
 
 
 ### 01.LiveData是什么东西
 - 基于观察者模式
-    - LiveData是一种持有可被观察数据的类。LiveData需要一个观察者对象，一般是Observer类的具体实现。当观察者的生命周期处于STARTED或RESUMED状态时，LiveData会通知观察者数据变化。
+    - LiveData是一种持有可被观察数据的类。LiveData需要一个观察者对象，一般是Observer类的具体实现。
+    - 当观察者的生命周期处于STARTED或RESUMED状态时，LiveData会通知观察者数据变化。
 - 感知生命周期
-    - 和其他可被观察的类不同的是，LiveData是有生命周期感知能力的，这意味着它可以在activities, fragments, 或者 services生命周期是活跃状态时更新这些组件。那么什么是活跃状态呢？就是STARTED和RESUMED就是活跃状态，只有在这两个状态下LiveData是会通知数据变化的。
+    - 和其他可被观察的类不同的是，LiveData是有生命周期感知能力的，这意味着它可以在activities, fragments, 或者 services生命周期是活跃状态时更新这些组件。
+    - 那么什么是活跃状态呢？就是STARTED和RESUMED就是活跃状态，只有在这两个状态下LiveData是会通知数据变化的。
 - 自动解除数据订阅
-    - 要想使用LiveData（或者这种有可被观察数据能力的类）就必须配合实现了LifecycleOwner的对象使用。在这种情况下，当对应的生命周期对象DESTORY时，才能移除观察者。这对Activity或者Fragment来说显得尤为重要，因为他们可以在生命周期结束的时候立刻解除对数据的订阅，从而避免内存泄漏等问题。
+    - 要想使用LiveData（或者这种有可被观察数据能力的类）就必须配合实现了LifecycleOwner的对象使用。
+    - 在这种情况下，当对应的生命周期对象DESTORY时，才能移除观察者。这对Activity或者Fragment来说显得尤为重要，因为他们可以在生命周期结束的时候立刻解除对数据的订阅，从而避免内存泄漏等问题。
 
 
 ### 02.使用LiveData的优势
@@ -56,95 +56,6 @@
 - 通过 observe()方法连接观察者和LiveData。observe()方法需要携带一个LifecycleOwner类。这样就可以让观察者订阅LiveData中的数据，实现实时更新。
 
 
-
-### 04.简单使用LiveData
-#### 4.1 单独使用LiveData
-- 举一个最简单的案例代码：
-    ```
-    liveData = new MutableLiveData<>();
-    liveData.observe(this, new Observer<String>() {
-        @Override
-        public void onChanged(@Nullable final String newText) {
-            // 更新数据
-            tv3.setText(newText);
-        }
-    });
-    liveData.setValue("小杨真的是一个逗比么");
-    ```
-- 那么上面这一段代码大概是什么意思呢？
-    - 首先创建一个 MutableLiveData（LiveData是抽象类）对象 ，通过 observe 方法可以订阅修改数据的通知，通过 postValue()或者 setValue() 方法发送事件更新数据，已经订阅的 Observer 能够得到数据更改的通知，就会回调 onChanged() 方法。
-
-
-
-#### 4.2 使用LiveData配合ViewModel
-- LiveData是一个数据的包装。具体的包装对象可以是任何数据，包括集合。它是一个抽象类，首先先创建一个类实现LiveData。代码如下所示：
-    ```
-    public class TextViewModel extends ViewModel {
-    
-        /**
-         * LiveData是抽象类，MutableLiveData是具体实现类
-         */
-        private MutableLiveData<String> mCurrentText;
-    
-        public MutableLiveData<String> getCurrentText() {
-            if (mCurrentText == null) {
-                mCurrentText = new MutableLiveData<>();
-            }
-            return mCurrentText;
-        }
-    
-    }
-    ```
-- 创建一个观察的对象，观察LiveData中的数据。目前在组件的onCreate()方法中开始观察数据，代码如下所示：
-    - 思考下，可以在onResume()中调用么，个人觉得不太好。因为系统会多次调用onResume()方法。
-    ```
-    private void initLiveData() {
-        // 创建一个持有某种数据类型的LiveData (通常是在ViewModel中)
-        model = ViewModelProviders.of(this).get(TextViewModel.class);
-        // 创建一个定义了onChange()方法的观察者
-        // 开始订阅
-        final Observer<String> nameObserver = new Observer<String>() {
-            @Override
-            public void onChanged(@Nullable final String newText) {
-                // 更新数据
-                tvText.setText(newText);
-            }
-        };
-        // 通过 observe()方法连接观察者和LiveData，注意：observe()方法需要携带一个LifecycleOwner类
-        model.getCurrentText().observe(this, nameObserver);
-    }
-    ```
-- 然后去创建更新对象数据内容的对象。如何去更新那个文本中的数据呢？代码如下所示：
-    - 想要在UI Controller中改变LiveData中的值呢？（比如点击某个Button设置文本内容的更改）。
-    - LiveData并没有提供这样的功能，但是Architecture Component提供了MutableLiveData这样一个类，可以通过setValue(T)和postValue(T)方法来修改存储在LiveData中的数据。MutableLiveData是LiveData的一个子类，从名称上也能看出这个类的作用。
-    - 调用setValue()方法就可以把LiveData中的值改为 "小杨真的是一个逗比么" 。同样，通过这种方法修改LiveData中的值同样会触发所有对这个数据感兴趣的类。那么setValue()和postValue()有什么不同呢？区别就是setValue()只能在主线程中调用，而postValue()可以在子线程中调用。
-    ```
-    findViewById(R.id.tv_click).setOnClickListener(new View.OnClickListener() {
-        @Override
-        public void onClick(View v) {
-            count++;
-            String text;
-            switch (count%5){
-                case 1:
-                    text = "小杨真的是一个逗比么";
-                    break;
-                case 2:
-                    text = "逗比赶紧来star吧";
-                    break;
-                case 3:
-                    text = "小杨想成为大神";
-                    break;
-                case 4:
-                    text = "开始刷新数据啦";
-                    break;
-                default:
-                    text = "变化成默认的数据";
-                    break;
-            }
-            model.getCurrentText().setValue(text);
-        }
-    });
-    ```
 
 
 ### 05.observe()和observerForever()
