--- a/Read/ReadShareWiki/04.执行策略/01.掌握些学习方法.md
+++ b/Read/ReadShareWiki/04.执行策略/01.掌握些学习方法.md
@@ -1,26 +1,29 @@
 #### 目录介绍
 - 01.先来说一个场景
 - 02.宏观指导的原则
-- 03.一万小时的定律
-- 04.找时间海绵学习法
-- 05.学什么三段分解法
-- 06.怎么学学习环式法
-- 07.效果之Play学习法
-- 08.组合地灵活使用
-- 09.总结和梳理一下
-- 10.思考题要做一下
+- 03.有效学习这回事
+- 04.一万小时的定律
+- 05.用海绵法找时间
+- 06.学什么三段分解
+- 07.环式思考学习法
+- 08.玩和教保证效果
+- 09.组合地灵活使用
+- 10.总结和梳理一下
+- 11.思考题要做一下
 
 
 
 
 ### 01.先来说一个场景
 - 不知道你是不是也有这样的感受：光是上班累得要死，还要陪对象吃饭逛街看电影，还有群里各种吃瓜，看剧，根本就没什么时间学习；等到哪天好不容易有点空余时间，又因为没有计划，只能随便找本书或者上网水水论坛看看；就算知道要针对某个技能专门提升一下，也不知道怎么学才能达到精通水平；过段时间回头一看，前几周学的东西又忘得差不多了；跟别人交流一下子就暴露了水平……
+- **根据上面的例子，大概拆分成几个问题：没有时间去学习，有了空闲时间不知道怎么安排，即使学习了后不知道是否学会，感觉学到了但是一旦交流或使用又不会呢**。
 - 因此建立一套学习机制很关键，或者写，或者做，或者计划，或者跟小伙伴交流，需要什么样的准则，下面我会说到……
 
 
 
 ### 02.宏观指导的原则
 - 一套系统的学习方法，既需要一个统领全局的宏观指导原则，让人能够一目了然地理解它的核心内容，同时也要能够回答以下四个关键问题，小杨总结如下：
+- **有效学习**？学习渠道，信息太多了，如何保证自己有效学习并学以致用。
 - **时间从哪里来**？如果没有足够的时间投入，再好的理论也只是纸上谈兵。
 - **学什么**？找到正确的学习方向，明确了学习的目标，才能做到有的放矢。
 - **怎么学**？不同的学习目的应该有不同的学习方法，保证学习的投入产出比。
@@ -28,41 +31,47 @@
 
 
 
-### 03.一万小时的定律
+### 03.有效学习这回事
+- 可能有很多的学习想法，或者有很多学习的渠道，订阅了很多学习课程。是否想过，如何高效学习，让自己的学习更有价值。
+- 为什么要在学习前面加上“有效”两个字。对大部分普通人来说，肯定希望学有所成，得到明确的收获，不管是解决一个工作中的具体问题，还是想提升自己的竞争力，亦或是缓解外界信息太多、变化太快带来的焦虑。不管是什么原因，对学习都是有诉求的，希望它能有效且高效。
+
+
+
+### 04.一万小时的定律
 - 总的指导原则是10000小时定律，它是一个很出名的用于专业领域提升的理论，有大量的相关资料可以参考（例如《异类》《1万小时天才理论》等），其核心思想是如果你想要在专业领域不断提升自己的能力，必须投入足够的时间。
 
 
 
-### 04.找时间海绵学习法
+### 05.用海绵法找时间
 - 10000 小时可不短，相当于平均每天3小时，持续10年时间。我们平时光是工作就已经“累成狗”了，可能还有家人需要照顾，怎么才能找到自己的10000小时呢？
 - 这就要靠海绵学习法了。海绵学习法是一个时间管理方法，它可以让你轻松地挤出时间，既不会对工作、家庭和娱乐有明显的影响，又能够兼顾学习。
 
 
 
-### 05.学什么三段分解法
+### 06.学什么三段分解
 - 有了时间之后，我们要学什么呢？怎么才能制定合理的学习目标呢？如何制定可行的学习计划并能够真正落地呢？这就要靠三段分解法了。
 - 三段分解法是制定学习目标和计划的方法，它基于职业等级体系，将10000小时逐级分解，最终落实到可以实施的各项学习行动。
 
 
 
-### 06.怎么学学习环式法
+### 07.环式思考学习法
 - 确定目标和计划后，我们具体要怎么提升技术能力呢？技术能力可以拆解成三个维度，技术深度、技术宽度和技术广度。
-- 针对技术能力的不同维度，有3个不同的学习方法：链式学习法适合提升技术深度，通过自顶向下逐步深入的方式，将关联技术逐一掌握。比较学习法适合提升技术宽度，通过比较相似的知识或者技能，全面掌握单个领域的技术。环式学习法适合提升技术广度，通过学习业务闭环流程中相关技术，全面掌握多个领域的技术。
+- 针对技术能力的不同维度，有3个不同的学习方法：**链式学习法**适合提升技术深度，通过自顶向下逐步深入的方式，将关联技术逐一掌握。**比较学习法**适合提升技术宽度，通过比较相似的知识或者技能，全面掌握单个领域的技术。**环式学习法**适合提升技术广度，通过学习业务闭环流程中相关技术，全面掌握多个领域的技术。
 
 
 
-### 07.效果之Play学习法
+### 08.玩和教保证效果
 - 就算用对了方法，在学习过程中还是会遇到一些难以解决的困难，这些困难会导致我们学习效果不好。
-- 第一个常见困难是，如果平时不学，真正要用的时候又来不及临时学；但如果平时学了，可能要等很久才能在工作找到的实践机会，到时候技术可能都生疏了。
-- 第二个常见的困难是，学完之后感觉学得不深，跟别人讨论的时候，或者在晋升答辩环节被问到的时候，就发现很多东西明明学过，却说不出个所以然来。
+- **第一个常见困难是，如果平时不学，真正要用的时候又来不及临时学；但如果平时学了，可能要等很久才能在工作找到的实践机会，到时候技术可能都生疏了**。
+- **第二个常见的困难是，学完之后感觉学得不深，跟别人讨论的时候，或者在晋升答辩环节被问到的时候，就发现很多东西明明学过，却说不出个所以然来**。
 - 针对这两个常见影响学习效果的问题，我通过学习和实践，归纳提炼出如下两种学习方法：
-- Play 学习法可以用来解决工作中暂时没有实践机会的问题，学以致“玩”，通过“玩耍”的方式来应用。
-- Teach 学习法可以用来解决学得不深的问题，教学相长，通过“教学”的方式来加深理解。
+- Play——玩学习法可以用来解决工作中暂时没有实践机会的问题，学以致“玩”，通过“玩耍”的方式来应用。
+- Teach——教学习法可以用来解决学得不深的问题，教学相长，通过“教学”的方式来加深理解。
 
 
 
 
-### 08.组合地灵活使用
+### 09.组合地灵活使用
 - 这些学习方法是相辅相成的，你可以根据你当前的级别和实际工作内容，把它们组合起来使用，具体的方式如下：
 - **第一步，无论你当前是什么级别，先用“三段分解法”来规划你的学习目标和计划**。
 - **第二步，使用“海绵学习法”来找到你可以用于学习的时间**。
@@ -74,41 +83,14 @@
 
 
 
-### 09.总结和梳理一下
+### 10.总结和梳理一下
 - 总结一下这一讲的重点内容：一套系统的学习方法，既需要一个总的指导原则，也需要回答 4 个关键问题：时间从哪里来？学什么？怎么学？怎么保证效果？
 - 在我总结的这套学习方法中，10000小时定律提供了指导原则；海绵学习法解决了时间从哪里来的问题；三段分解法解决了学什么的问题；链式、环式和比较学习法解决了怎么学的问题，Play 和 Teach学习法解决了怎么保证学习效果的问题。学习方法是相辅相成的，你需要基于当前的级别和工作内容，把多个方法组合起来使用。
 
 
 
-### 10.思考题要做一下
+### 11.思考题要做一下
 - 你在学习过程中遇到的最大困难或者困惑是什么？你尝试了什么解决方法呢，效果怎么样？
-
-
-
-### 其他介绍
-#### 01.关于我的博客
-- github：https://github.com/yangchong211
-- 知乎：https://www.zhihu.com/people/yczbj/activities
-- 简书：http://www.jianshu.com/u/b7b2c6ed9284
-- csdn：http://my.csdn.net/m0_37700275
-- 开源中国：https://my.oschina.net/zbj1618/blog
-- 邮箱：yangchong211@163.com
-- segmentfault头条：https://segmentfault.com/u/xiangjianyu/articles
-- 掘金：https://juejin.im/user/5939433efe88c2006afa0c6e
-- 博客园：https://www.cnblogs.com/yc211/
-- 腾讯云博客：https://cloud.tencent.com/developer/user/4302887
-- 51cto博客：https://blog.51cto.com/11359966
-
-
-
-#### 02.个人其他
-- 今日头条：https://www.toutiao.com/c/user/69380616341/#mid=1578618189107214
-- 新浪博客：http://blog.sina.com.cn/786041010yc
-- 网易lofter：http://yangchong211.lofter.com/
-- 简书：https://www.jianshu.com/u/ec34c1a84f75
-- 豆瓣：https://www.douban.com/people/79956976/notes
-- UC大鱼号：http://a.mp.uc.cn/media?mid=73fdf1411d2c49bcb96de3c0656fb807&from=xss&uc_param_str=frdnsnpfvecpntnwprdssskt&uc_biz_str=S:custom%7CC:iflow_ncmt
-- 腾讯：https://media.om.qq.com/author?id=MvVPLwMxS2oU5dFZrlQM8q0w0
 
 
 
