--- a/Read/ReadShareWiki/04.执行策略/13.五步问题处理法.md
+++ b/Read/ReadShareWiki/04.执行策略/13.五步问题处理法.md
@@ -13,12 +13,18 @@
 
 ### 01.前言简单的介绍
 #### 1.1 处理问题很重要
-- 5W 根因分析法，教你通过追问5个为什么来找到问题的根本原因。不过，找到原因不等于解决问题。这就好比大夫看病，光是看出来患者的病根在心脏还不够，还要明确心脏到底出了什么毛病，是只用服药还是需要做手术，如果要安排手术，具体要怎么操刀。
+- 找到原因不等于解决问题。这就好比大夫看病，光是看出来患者的病根在心脏还不够，还要明确心脏到底出了什么毛病，是只用服药还是需要做手术，如果要安排手术，具体要怎么操刀。
 - 处理问题也是这样，它是一个复杂的系统工程，既能够反映你的专业能力，又能够反映出你的综合能力。所以问题既有可能成为拖垮你绩效的陷阱，也有可能成为你晋升的机遇，关键在于你如何有效地去处理。
 
 
-#### 1.2 5S处理法
-- 那么问题到底要怎么处理呢？我总结了一个5S问题处理法，也就是把处理问题的过程分为5个步骤：明确问题（Specify）、拆解问题（Split）、定位问题（Seek）、解决问题（Solve）和落地行动（Sort），从而化危为机。
+#### 1.2 处理问题的背景
+- 无论是工作还是生活，其过程就是遇到问题，分析问题，解决问题，然后再遇到下一个问题。这是一个递归的过程，永无休止。
+- 如何解决问题呢？很多人的步骤是这样的：尝试一种解决方案失败了，再尝试另一种又失败了，然后再重复尝试。这种方式是比较低效的。最好的方式是建立一个思维框架，然后在这个框架上不断练习自己解决问题的能力。
+
+
+
+#### 1.3 5S处理法
+- 那么问题到底要怎么处理呢？总结了一个5S问题处理法，也就是把处理问题的过程分为5个步骤：明确问题（Specify）、拆解问题（Split）、定位问题（Seek）、解决问题（Solve）和落地行动（Sort），从而化危为机。
 
 
 ### 02.第一步明确问题
@@ -33,10 +39,10 @@
 - 首先，对于已经用数据量化的问题，关键在于确认数据是否准确。通过数据来展现问题是比较直观的，而且很多人认为“数据不会撒谎”，所以他们看到数据之后就直接开始处理。但其实这种情况也是需要明确问题的。因为数据可能出错，出错的原因有很多种，可能是源数据出错，也可能是计算时出错。
 
 
+
 #### 2.3 没有量化的问题
-- 对于没有用数据量化的问题，又可以分为两类。
 - 一类是可以量化但是还没量化的，比如“业务增长放缓”，其中的“放缓”到底是什么意思，是增长速度从 100% 下降到 60%，还是增长速度从 10% 下降到6%？不同的人理解可能千差万别。对于这一类问题，你把量化的环节补上就行了。比如老板说：“我对当前的利润增长速度不满意，希望更快一点。”你就要明确，老板关注的指标是季度增长率还是月增长率？更快一些具体是多快，20% 还是 50% 还是 200%？
-- 另一类是无法简单量化的，比如“团队士气不高”，其中的“士气”只是一种主观感受，很难量化。所以这类问题是最棘手的，一是士气不高也许只是领导自己的感受有问题，并不是真的存在这个现象；二是就算真的士气不高，改善的效果也很难衡量。你怎么证明你提高了士气，又怎么证明士气到底提高了多少呢？直接用数据来衡量肯定是不现实的。经过实践摸索，我发现调查问卷是一种比较有效的方法。既然是主观感受，那我们就综合大多数人的主观感受来得到一个相对客观的评价。这就像一部电影好不好，虽然不能用片长、投资金额或明星数量来衡量，但是如果看过的观众都来打分，最后综合算出一个分数，还是有一定参考意义的。而且评价的人越多，越能客观地反映影片的质量，这也是豆瓣等平台的价值。
+- 另一类是无法简单量化的，比如“团队士气不高”，其中的“士气”只是一种主观感受，很难量化。所以这类问题是最棘手的，一是士气不高也许只是领导自己的感受有问题，并不是真的存在这个现象；二是就算真的士气不高，改善的效果也很难衡量。你怎么证明你提高了士气，又怎么证明士气到底提高了多少呢？直接用数据来衡量肯定是不现实的。经过实践摸索，我发现调查问卷是一种比较有效的方法。既然是主观感受，那我们就综合大多数人的主观感受来得到一个相对客观的评价。
 
 
 
@@ -103,9 +109,14 @@
 
 
 
+#### 6.4 不断的练习
+- 在过程中你需要不断的练习练习练习。如果你想成为一个解决问题的专家，那么你就需要解决足够多的问题。
+
+
+
 ### 07.总结一下重点内容
-- 5S 问题处理法就是把处理问题的过程分为 5 个步骤：明确问题（Specify）、拆解问题（Split）、定位问题（Seek）、解决问题（Solve）和落地行动（Sort），从而化危为机。
-- 处理问题时容易犯的 5 个错误是：（1）问题本身都没有明确定义，就直接开始采取行动；（2）把自己当成拯救世界的超级英雄，期望可以一个人搞定所有的事情；（3）没有找到根本原因的情况下，就急于给出解决方案；（4）思维比较局限，只做了一个方案提交给上级；（5）做事没有重点和优先级，眉毛胡子一把抓。
+- 5S 问题处理法就是把处理问题的过程分为5个步骤：明确问题（Specify）、拆解问题（Split）、定位问题（Seek）、解决问题（Solve）和落地行动（Sort），从而化危为机。
+- 处理问题时容易犯的5个错误是：（1）问题本身都没有明确定义，就直接开始采取行动；（2）把自己当成拯救世界的超级英雄，期望可以一个人搞定所有的事情；（3）没有找到根本原因的情况下，就急于给出解决方案；（4）思维比较局限，只做了一个方案提交给上级；（5）做事没有重点和优先级，眉毛胡子一把抓。
 - 明确问题可以通过数据量化，也可以靠调研来衡量；拆解问题是为了发挥团队的力量；定位根因、提出方案和落地执行时，可以分别使用 5W 根因分析法、3C 方案设计法和 PDCA 执行法。
 
 
