--- a/Read/ReadShareWiki/04.执行策略/15.金字塔汇报方法.md
+++ b/Read/ReadShareWiki/04.执行策略/15.金字塔汇报方法.md
@@ -3,6 +3,7 @@
 - 02.什么是金字塔原理
 - 03.金字塔四大原则
 - 04.金字塔汇报法
+- 05.拥有结构化思维
 - 06.总结一下汇报法
 
 
@@ -27,12 +28,14 @@
 
 ### 03.金字塔四大原则
 - 背后的 4 条基本原则才是关键。这些原则保证了你的汇报结构是重点突出、逻辑清晰、主次分明的，能够让别人快速地抓住重点，清楚地理解内容，牢固地记住信息。
+- 关键的四个要点分别是：结论先行，以上统下，归类分组，逻辑递进。
 
 
 
 #### 3.1 结论先行
 ##### 3.3.1 说一个场景
-- 如果你想向别人输出信息（文章、汇报、报告、演讲等），在一开始的时候就应该抛出结论，也就是你想要传达的中心思想。因为如果你讲的内容比较多，别人找不到重要的结论，可能根本没兴趣认真听完；如果别人听完不明确你的结论或者把结论搞错了，最后你的输出汇报效果也会大打折扣。
+- 如果你想向别人输出信息（文章、汇报、报告、演讲等），在一开始的时候就应该抛出结论，也就是你想要传达的中心思想。
+- 因为如果你讲的内容比较多，别人找不到重要的结论，可能根本没兴趣认真听完；如果别人听完不明确你的结论或者把结论搞错了，最后你的输出汇报效果也会大打折扣。
 
 
 
@@ -48,6 +51,7 @@
 
 #### 3.2 自顶向下
 - 光有结论是不行的，这个结论还得让别人信服。所以我们采用自顶向下的结构来组织逻辑，用下层的信息来支撑上层的结论。
+- 也就是上面有结论，下面有理由，结论概括理由，理由支撑结论，上下对应。
 
 
 
@@ -60,6 +64,7 @@
 
 
 #### 3.4 逻辑递进
+- 一般来讲，所有的逻辑关系都在四种顺序之内，分别是：时间顺序、空间顺序、重要性顺序以及演绎顺序。
 - 光通过归类分组来控制数量还是不够的，必须保证同级别的内容具备逻辑关联，主要是一致性和顺序性。
 - 一致性是指，同级别的内容必须属于同一逻辑范围。比如苹果、香蕉、葡萄、菠萝都属于“水果”范围，而牛奶就不属于“水果”。
 - 顺序性是指，同级别的内容是按照某种顺序排列的，比如北上广深四个城市，既可以按照地理位置从北到南排序，也可以按照 GDP 从大到小排序。
@@ -85,6 +90,12 @@
 
 #### 4.4 总结改进
 - 总结经验教训和后续改进措施，注意不要随便拍脑袋提出改进措施，改进措施本身也要求有理有据。要注意，列出来的改进措施，一定是你接下来真的准备去做的，不要为了凑数而加上去，因为下次汇报的时候，领导很可能会想先了解一下你上次汇报时列出的改进措施到底落实得怎么样。
+
+
+
+### 05.拥有结构化思维
+- 人在思考和表达的时候，有没有一个清晰的结构。“思考”一词看起来虚幻，但它其实是存在某种结构的，也就是结构化思维，它决定了一个人看待问题、分析问题、解决问题的角度。
+- 所谓结构化思维，是将无序的信息梳理为有序的信息，并通过一些逻辑、框架，将问题有规律地拆解、细化、提炼、归因，最终找到有效解决方案的过程。它会让我们思考得更全面、深刻，表达得更清晰、有力，行动起来更高效，更容易抓住重点、掌控全局。
 
 
 ### 06.总结一下汇报法
